# ZECT

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bfe9cfe5fde9_initial_schema.py  cd47d616d383_initial_schema.py
backend/app/: database.py  github_service.py  main.py  models.py  review_service.py  schemas.py  token_tracker.py
backend/app/middleware/: __init__.py  rate_limiter.py
backend/app/routers/: analytics.py  app_runner.py  audit_trail.py  auth.py  autofix.py  build_phase.py  ci_monitor.py  code_review.py  context_management.py  data_flywheel.py  data_layer.py  deploy_phase.py  dream_engine.py  export_share.py  file_explorer.py  generated_outputs.py  git_ops.py  github.py  jira_integration.py  llm.py  mcp.py  memory.py  model_selection.py  orchestration.py  permissions.py  projects.py  repo_analysis.py  review_phase.py  rules_engine.py  settings.py  skills.py  skills_engine.py  slack_integration.py  token_controls.py  transfer.py  ultrareview.py  user_sessions.py
backend/tests/: conftest.py  test_enterprise_routers.py  test_health.py
docs/: AI_AGNOSTIC_USAGE.md  ARCHITECTURE_USAGE_GUIDE.md  ASK_PLAN_DEVELOPMENT_WORKFLOW.md  AUTO_SKILLS_GUIDE.md  AWS_DEPLOYMENT_GUIDE.md  BLUEPRINT_GENERATION_GUIDE.md  CODE_REVIEW_WORKFLOW.md  CONFIGURATION_GUIDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_PROMPTS.md  DOCKER_SETUP_GUIDE.md  EC2_DEPLOYMENT_GUIDE.md  ECS_DEPLOYMENT_GUIDE.md  (+28 more)
(+143 files in other folders)
