[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.136.0"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
pygithub = "^2.9.1"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
sqlalchemy = "^2.0.49"
aiosqlite = "^0.22.1"
openai = "^2.33.0"
alembic = "^1.18.0"
jinja2 = "^3.1.6"
atlassian-python-api = "^3.41.0"
slack-sdk = "^3.34.0"
ruff = {version = "^0.11.0", optional = true}
pytest = {version = "^8.0", optional = true}
pytest-asyncio = {version = "^0.25", optional = true}

[tool.poetry.extras]
test = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
